--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,11 +8,12 @@ phases:
     commands:
       - echo Nothing to do in the pre_build phase...
       - ls /root/.m2/*
+      - $(aws ecr get-login --no-include-email --region ap-northeast-1)
   build:
     commands:
       - echo Build started on `date`
       - mvn compile
-      - mvn package
+      - mvn jib:build
   post_build:
     commands:
       - echo Build completed on `date`
