--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>org.springframework</groupId>
   <artifactId>gs-spring-boot</artifactId>
-  <version>0.1.0</version>
+  <version>0.1.0-SNAPSHOT</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -24,6 +24,12 @@
     <java.version>1.8</java.version>
   </properties>
 
+  <scm>
+    <connection>scm:git:git@github.com:ksaito1125/jibsample.git</connection>
+    <!-- <developerConnection>scm:svn:https://127.0.0.1/svn/my-project</developerConnection> -->
+    <tag>HEAD</tag>
+    <!-- <url>http://127.0.0.1/websvn/my-project</url> -->
+  </scm>
 
   <build>
     <plugins>
