--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.springframework</groupId>
   <artifactId>gs-spring-boot</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>0.1.0</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -27,7 +26,7 @@
   <scm>
     <connection>scm:git:git@github.com:ksaito1125/jibsample.git</connection>
     <!-- <developerConnection>scm:svn:https://127.0.0.1/svn/my-project</developerConnection> -->
-    <tag>HEAD</tag>
+    <tag>gs-spring-boot-0.1.0</tag>
     <!-- <url>http://127.0.0.1/websvn/my-project</url> -->
   </scm>
 
