--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,15 @@
           </to>
         </configuration>
       </plugin>
+      <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-release-plugin</artifactId>
+	<version>2.5.3</version>
+	<configuration>
+	  <releaseProfiles>release</releaseProfiles>
+	  <goals>install</goals>
+	</configuration>
+      </plugin>
     </plugins>
   </build>
 
