--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.springframework</groupId>
   <artifactId>gs-spring-boot</artifactId>
-  <version>0.1.2-SNAPSHOT</version>
+  <version>0.1.2</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -25,7 +25,7 @@
 
   <scm>
     <connection>scm:git:git@github.com:ksaito1125/jibsample.git</connection>
-    <tag>HEAD</tag>
+    <tag>gs-spring-boot-0.1.2</tag>
     <!-- <url>http://127.0.0.1/websvn/my-project</url> -->
   </scm>
 
