--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,15 @@
 
   <groupId>org.springframework</groupId>
   <artifactId>gs-spring-boot</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>1.0.${revision}</version>
+
+  <distributionManagement>
+    <repository>
+      <id>deploy-repository</id>
+      <name>deployRepository</name>
+      <url>file://${env.HOME}/deployRepository</url>
+    </repository>
+  </distributionManagement>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -22,12 +30,12 @@
 
   <properties>
     <java.version>1.8</java.version>
+    <revision>0-SNAPSHOT</revision>
   </properties>
 
   <scm>
     <connection>scm:git:git@github.com:ksaito1125/jibsample.git</connection>
     <tag>HEAD</tag>
-    <!-- <url>http://127.0.0.1/websvn/my-project</url> -->
   </scm>
 
   <build>
