chore: scm:tag用の設定を追加

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
   <build>
     <plugins>
       <plugin>
+        <artifactId>maven-scm-plugin</artifactId>
+        <version>1.11.2</version>
+        <configuration>
+             <tag>${project.artifactId}-${project.version}</tag>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
