test: mavenでjarとsourceをリリースリポジトリにデプロイするテストです。

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,20 @@
     <version>2.1.6.RELEASE</version>
   </parent>
 
+  <distributionManagement>
+    <repository>
+      <id>ark.release</id>
+      <name>abc</name>
+      <url>https://cache.ark.tsis.toshiba.co.jp/repository/test-repo/</url>
+    </repository>
+    <snapshotRepository>
+      <id>ark.snapshots</id>
+      <uniqueVersion>false</uniqueVersion>
+      <name>Project Snapshots Repository</name>
+      <url>${deploy.base}/mvnbase/snapshot</url>
+    </snapshotRepository>
+  </distributionManagement>
+
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -40,6 +54,19 @@
             <image>jibsample</image>
           </to>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
